fixed the alignment issue

--- a/plugins/login_geoip/login_geoip.css
+++ b/plugins/login_geoip/login_geoip.css
@@ -1,12 +1,10 @@
+
 #login_time{
 	width: 100%;
 	margin-left:auto;
 	margin-right:auto;
 	padding-top: 10px;
-}
-
-#mailboxcontainer {
-	bottom: 157px;
+	bottom: 0px;
 }
 
 .login_history {
